# LIS2DW12

./: CMakeLists.txt
src/: LIS2DW12Sensor.cpp  LIS2DW12Sensor.h  lis2dw12_reg.c
